0.7.0.12
Ensure that host.containerhelper.internal is set inside the container even if -updatehosts isn't used
Do not use docker pull when calling New-BcImage with a BaseImage
Issue #1077 Increase timeout for downloading symbols
Issue #1078 Import-NavContainerLicense with -restart fails

0.7.0.11
Issue #1068 New-BcImage doesn't run on Windows Server 2016
Write Warning when creating new container based on imagename without artifacts
Issue #1047 Download-Artifacts folder rename fails as folder is probably blocked by anti virus - add retry
Added Database options to CreateScript / New-BcContainerWizard
Add support for configuration file C:\ProgramData\NavContainerHelper\NavContainerHelper.config.json to allow for global configurations (bcartifactsCacheFolder for now)
Add support for configuration hashtable $navContainerHelperConfig - with runtime settings defaulted from code and from config file

0.7.0.10
Issue #1043 Removal of AAD application needs to use case insensitive search
Check that artifactUrl exists as a variable before using it when replacing NavServerContainer
Add parameter SkipDatabase to New-BcImage to create an image without a database (faster if the image is always used with a .bak file or foreign database server)
Issue 1057 add parameter ShowMyCode to Get-NavContainerRuntimePackage
Add artifactUrl parameter to Replace-NavServerContainer
Add function New-BcContainerWizard to invoke script generator script

0.7.0.9
Issue #1042 Ensure that dotnetcore prerequisite is downloaded before starting the container
Issue #1047 Increase download timeout to 300 seconds for each artifact and prerequisite
Add timeout parameter to Download-File and Download-Artifacts

0.7.0.8
Issue #1038 Ensure that Download-Artifacts is more resilient towards exceptions or user cancellations during artifact expansion.
Avoid returning platform artifacts as localizations (if you don't specify country)
Ensure that the latest generic image is pulled when building an image with New-BcImage