@@ -19,53 +19,71 @@ function Get-BestGenericImageName {
     $UBR = (Get-ItemProperty 'HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion' -Name UBR).UBR
     $hostOsVersion = [System.Version]::Parse("$($os.Version).$UBR")
 
-    $imagetags = Get-NavContainerImageTags -imageName "mcr.microsoft.com/dynamicsnav"
+    $repo = $navContainerHelperConfig.genericImageName.Split(':')[0]
+    $tag = $navContainerHelperConfig.genericImageName.Split(':')[1].Replace('{0}','*')
+
+    $imagetags = Get-NavContainerImageTags -imageName $repo
     $versions = @()
     if ($imagetags) {
-        $versions = $imagetags.tags | Where-Object { $_.startswith('10.0.') -and $_.endswith('-generic') } | % { [System.Version]($_.SubString(0,$_.IndexOf('-'))) }
+        $versions = $imagetags.tags | Where-Object { $_ -like $tag } | % { [System.Version]($_.SubString($tag.indexOf('*'), $_.length-$tag.length+1)) }
     }
     if (-not $versions) {
 
         # ImageTags not yet updated - use hardcoded list
-
         $versions = @(
-        "10.0.14393.2906-generic"
-        "10.0.17763.437-generic"
-        "10.0.18362.116-generic"
-        "10.0.14393.2972-generic"
-        "10.0.17763.504-generic"
-        "10.0.18362.175-generic"
-        "10.0.14393.3025-generic"
-        "10.0.17763.557-generic"
-        "10.0.18362.239-generic"
-        "10.0.14393.3085-generic"
-        "10.0.17763.615-generic"
-        "10.0.17134.950-generic"
-        "10.0.18362.295-generic"
-        "10.0.14393.3144-generic"
-        "10.0.17763.678-generic"
-        "10.0.17134.1006-generic"
-        "10.0.18362.356-generic"
-        "10.0.14393.3204-generic"
-        "10.0.17763.737-generic"
-        "10.0.17134.1130-generic"
-        "10.0.18362.476-generic"
-        "10.0.14393.3326-generic"
-        "10.0.17763.864-generic"
-        "10.0.18363.476-generic"
-        "10.0.18362.535-generic"
-        "10.0.18363.535-generic"
-        "10.0.14393.3384-generic"
-        "10.0.17763.914-generic"
-        "10.0.18362.592-generic"
-        "10.0.18363.592-generic"
-        "10.0.14393.3443-generic"
-        "10.0.17763.973-generic"
-        "10.0.18362.658-generic"
-        "10.0.18363.658-generic"
-        "10.0.14393.3506-generic"
-        "10.0.17763.1040-generic"
-        ) | % { [System.Version]($_.SubString(0,$_.IndexOf('-'))) }
+        "10.0.14393.2906"
+        "10.0.14393.2972"
+        "10.0.14393.3025"
+        "10.0.14393.3085"
+        "10.0.14393.3144"
+        "10.0.14393.3204"
+        "10.0.14393.3326"
+        "10.0.14393.3384"
+        "10.0.14393.3443"
+        "10.0.14393.3506"
+        "10.0.14393.3630"
+        "10.0.14393.3686"
+        "10.0.14393.3750"
+        "10.0.17134.1006"
+        "10.0.17134.1130"
+        "10.0.17134.950"
+        "10.0.17763.1040"
+        "10.0.17763.1158"
+        "10.0.17763.1217"
+        "10.0.17763.1282"
+        "10.0.17763.437"
+        "10.0.17763.504"
+        "10.0.17763.557"
+        "10.0.17763.615"
+        "10.0.17763.678"
+        "10.0.17763.737"
+        "10.0.17763.864"
+        "10.0.17763.914"
+        "10.0.17763.973"
+        "10.0.18362.116"
+        "10.0.18362.175"
+        "10.0.18362.239"
+        "10.0.18362.295"
+        "10.0.18362.356"
+        "10.0.18362.476"
+        "10.0.18362.535"
+        "10.0.18362.592"
+        "10.0.18362.658"
+        "10.0.18362.720"
+        "10.0.18362.778"
+        "10.0.18362.836"
+        "10.0.18362.900"
+        "10.0.18363.476"
+        "10.0.18363.535"
+        "10.0.18363.592"
+        "10.0.18363.658"
+        "10.0.18363.720"
+        "10.0.18363.778"
+        "10.0.18363.836"
+        "10.0.18363.900"
+        "10.0.19041.264"
+        "10.0.19041.329"
+        ) | % { [System.Version]$_ }
     }
     
     $genericImageName = ""
@@ -80,7 +98,7 @@ function Get-BestGenericImageName {
         if (-not $version) {
             $version = $myversions | Select-Object -Last 1
         }
-        $genericImageName = "mcr.microsoft.com/dynamicsnav:$($version.ToString())-generic"
+        $genericImageName = [string]::format($navContainerHelperConfig.genericImageName, $version.ToString())
     }
     $genericImageName
 }
