@@ -3,6 +3,7 @@ Ensure that host.containerhelper.internal is set inside the container even if -u
 Do not use docker pull when calling New-BcImage with a BaseImage
 Issue #1077 Increase timeout for downloading symbols
 Issue #1078 Import-NavContainerLicense with -restart fails
+Add genericImageName and usePsSession to module configuration
 
 0.7.0.11
 Issue #1068 New-BcImage doesn't run on Windows Server 2016
